Shorter fixed nav on mobile

--- a/app/assets/stylesheets/bootstrap-override.scss
+++ b/app/assets/stylesheets/bootstrap-override.scss
@@ -12,6 +12,10 @@
   background-color: $dark;
   padding: 10px 0;
   border: 0;
+
+  @media (max-width: 767px) {
+    padding: 0;
+  }
 }
 
 .navbar-inverse .navbar-brand {
