--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -3,6 +3,10 @@ body {
   margin-bottom: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   color: $dark;
+
+  @media (max-width: 767px) {
+    margin-top: 70px;
+  }
 }
 
 p, li, td, label {
